2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-component.c
	(ui_event, impl_Bonobo_UIComponent_execVerb): Reflect latest
	bonobo_closure_invoke() API changes.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-canvas-component.c: Use the bonobo-ui-marshal.[ch]
	marshalling functions.
	* bonobo/bonobo-control-frame.c: ditto.
	* bonobo/bonobo-ui-engine.c: ditto.
	* bonobo/bonobo-ui-xml.c: ditto.

	* bonobo/bonobo-ui-marshal.list: Added `VOID:STRING,BOOLEAN',
	`BOOLEAN:POINTER', `VOID:POINTER,STRING', `VOID:POINTER,POINTER'.

2001-09-07 Glynn Foster <glynn.foster@sun.com>
	
	* Makefile.am: Change includedir to gnome-2.0/ instead of gnome/2/

2001-09-03  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_set_status): 
	do escaping on set string.

	* bonobo/bonobo-ui-node.c (append_escaped_text): cpy from glib.
	(internal_to_string): do entity encoding for basic entities.

	* tests/test-ui.c (main): upd. regression tests.

2001-09-06  Anders Carlsson  <andersca@gnu.org>

	* bonobo/Makefile.am (libbonoboincludedir): Change includedir
	to gnome-2.0/ instead of gnome/2/

	* bonobo/libbonoboui-2.0.pc.in (Cflags): Likewise.

Sun Sep 02 23:32:07 2001  George Lebl <jirka@5z.com>

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full):
	  libgnome_module_info is now libgnome_module_info_get ()

Sun Sep 02 00:50:00 2001  George Lebl <jirka@5z.com>

	* bonobo/bonobo-file-selector-util.c (create_control):
	  gnome_program_get_name is now called gnome_program_get_app_id
	  so use that.

2001-08-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW

2001-08-24  jacob berkman  <jacob@ximian.com>

	* tests/test-filesel.c: test for bonobo-file-selector

	* bonobo/bonobo-file-selector-util.[ch]: import libgnomefilesel

2001-08-22  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): do a batch of 1000 sets for profiling.
