@@ -21,7 +21,6 @@
 /*** gnomehello */
 
 #include <config.h>
-#include <libgnome.h>
 #include <bonobo/bonobo-ui-main.h>
 
 
